test/corpus/memory_specification.txt
===
typed
===
mem M[4*1024, card(16)]
---
(top_level
  (specification
    (memory_specification
      (identifier)
      (mem_part
        (expression
          (binary_expression
            (arithmetic_expression
              (expression
                (constant_expression
                  (litteral
                    (integer))))
              (expression
                (constant_expression
                  (litteral
                    (integer)))))))
        (type_expression
          (card_type
            (expression
              (constant_expression
                (litteral
                  (integer))))))))))
===
untyped
===
mem M[4*1024]
---
(top_level
  (specification
    (memory_specification
      (identifier)
      (mem_part
        (expression
          (binary_expression
            (arithmetic_expression
              (expression
                (constant_expression
                  (litteral
                    (integer))))
              (expression
                (constant_expression
                  (litteral
                    (integer)))))))))))
===
aliased
===
mem M32[4*1024, card(32)]
mem M16[4*1024, card(16)] alias = M32
---
(top_level
  (specification
    (memory_specification
      (identifier)
      (mem_part
        (expression
          (binary_expression
            (arithmetic_expression
              (expression
                (constant_expression
                  (litteral
                    (integer))))
              (expression
                (constant_expression
                  (litteral
                    (integer)))))))
        (type_expression
          (card_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))))
  (specification
    (memory_specification
      (identifier)
      (mem_part
        (expression
          (binary_expression
            (arithmetic_expression
              (expression
                (constant_expression
                  (litteral
                    (integer))))
              (expression
                (constant_expression
                  (litteral
                    (integer)))))))
        (type_expression
          (card_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))
      (attributes
        (attribute
          (identifier)
          (location
            (identifier)))))))
