test/corpus/mode_specification.txt
===
example 1
===
reg GPR[32, int(32)]
var TMP[1, int(32)]

mode Rwired0(num: card(5)) = if num == 0 then 0 else GPR[num] endif
	set = { if num != 0 then GPR[num] = TMP; endif; }
	syntax = format("GRP%d", num)
	image = format("%5b", num)

mode R(num: card(5)) = GPR[num]
	set = { GPR[num] = TMP; }
	syntax = format("GRP%d", num)
	image = format("%5b", num)

op add(rd: Rwired0, ra: Rwired0, b: R)
	syntax = format("add %s, %s, %s", rd, ra, b)
	image = format("100110 %s, %s, %s", rd, ra, b)
	action = {
		TMP = ra + rb;
		rd.set;
	}
---
(top_level
  (specification
    (register_specification
      (identifier)
      (reg_part
        (expression
          (constant_expression
            (litteral
              (integer))))
        (type_expression
          (int_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))))
  (specification
    (variable_specification
      (identifier)
      (reg_part
        (expression
          (constant_expression
            (litteral
              (integer))))
        (type_expression
          (int_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))))
  (specification
    (mode_specification
      (and_mode_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer))))))))
        (expression
          (if_expression
            (expression
              (binary_expression
                (comparison_expression
                  (expression
                    (reference_expression
                      (identifier)))
                  (expression
                    (constant_expression
                      (litteral
                        (integer)))))))
            (expression
              (constant_expression
                (litteral
                  (integer))))
            (expression
              (reference_expression
                (identifier)
                (index_part
                  (expression
                    (reference_expression
                      (identifier))))))))
        (attributes
          (attribute
            (identifier)
            (block
              (sequence
                (statement
                  (conditional_statement
                    (expression
                      (binary_expression
                        (comparison_expression
                          (expression
                            (reference_expression
                              (identifier)))
                          (expression
                            (constant_expression
                              (litteral
                                (integer)))))))
                    (sequence
                      (statement
                        (assignment_statement
                          (location
                            (identifier)
                            (index_part
                              (expression
                                (reference_expression
                                  (identifier)))))
                          (expression
                            (reference_expression
                              (identifier)))))))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier))))))))))
  (specification
    (mode_specification
      (and_mode_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer))))))))
        (expression
          (reference_expression
            (identifier)
            (index_part
              (expression
                (reference_expression
                  (identifier))))))
        (attributes
          (attribute
            (identifier)
            (block
              (sequence
                (statement
                  (assignment_statement
                    (location
                      (identifier)
                      (index_part
                        (expression
                          (reference_expression
                            (identifier)))))
                    (expression
                      (reference_expression
                        (identifier))))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier))))))))))
  (specification
    (operation_specification
      (and_operation_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (named_type
                (identifier))))
          (parameter
            (identifier)
            (type_expression
              (named_type
                (identifier))))
          (parameter
            (identifier)
            (type_expression
              (named_type
                (identifier)))))
        (attributes
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (block
              (sequence
                (statement
                  (assignment_statement
                    (location
                      (identifier))
                    (expression
                      (binary_expression
                        (arithmetic_expression
                          (expression
                            (reference_expression
                              (identifier)))
                          (expression
                            (reference_expression
                              (identifier))))))))
                (statement
                  (action_statement
                    (identifier)
                    (identifier)))))))))))
===
example 2
===
reg R[16, int(32)]
mem M[32, card(8)]

mode OffsetAddressMode(r: card(4), offset: int(12)) = M[R[r] + offset]
	syntax = format("%d[%l]", offset, r)
	action = { /* TODO */ }

mode IndexedAddressMode(r: card(4), i: card(5)) = M[R[r] + R[i]]
	syntax = format("%d[%l]", offset, r)
	action = { /* TODO */ }

mode AddressMode = OffsetAddressMode | IndexedAddressMode

op LDR(r: card(4), addr: AddressMode)
	syntax = format("ldr %d, %s", r, addr)
	image = format("011010101 %4b, %s", r, addr)
	action = { R[r] = addr; }

op STR(r: card(4), addr: AddressMode)
	syntax = format("str %d, %s", r, addr)
	image = format("111000110 %4b, %s", r, addr)
	action = { addr = R[r]; }
---
(top_level
  (specification
    (register_specification
      (identifier)
      (reg_part
        (expression
          (constant_expression
            (litteral
              (integer))))
        (type_expression
          (int_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))))
  (specification
    (memory_specification
      (identifier)
      (mem_part
        (expression
          (constant_expression
            (litteral
              (integer))))
        (type_expression
          (card_type
            (expression
              (constant_expression
                (litteral
                  (integer)))))))))
  (specification
    (mode_specification
      (and_mode_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer)))))))
          (parameter
            (identifier)
            (type_expression
              (int_type
                (expression
                  (constant_expression
                    (litteral
                      (integer))))))))
        (expression
          (reference_expression
            (identifier)
            (index_part
              (expression
                (binary_expression
                  (arithmetic_expression
                    (expression
                      (reference_expression
                        (identifier)
                        (index_part
                          (expression
                            (reference_expression
                              (identifier))))))
                    (expression
                      (reference_expression
                        (identifier)))))))))
        (attributes
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (block
              (comment)))))))
  (specification
    (mode_specification
      (and_mode_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer)))))))
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer))))))))
        (expression
          (reference_expression
            (identifier)
            (index_part
              (expression
                (binary_expression
                  (arithmetic_expression
                    (expression
                      (reference_expression
                        (identifier)
                        (index_part
                          (expression
                            (reference_expression
                              (identifier))))))
                    (expression
                      (reference_expression
                        (identifier)
                        (index_part
                          (expression
                            (reference_expression
                              (identifier))))))))))))
        (attributes
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (block
              (comment)))))))
  (specification
    (mode_specification
      (or_mode_specification
        (identifier)
        (identifier)
        (identifier))))
  (specification
    (operation_specification
      (and_operation_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer)))))))
          (parameter
            (identifier)
            (type_expression
              (named_type
                (identifier)))))
        (attributes
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (block
              (sequence
                (statement
                  (assignment_statement
                    (location
                      (identifier)
                      (index_part
                        (expression
                          (reference_expression
                            (identifier)))))
                    (expression
                      (reference_expression
                        (identifier))))))))))))
  (specification
    (operation_specification
      (and_operation_specification
        (identifier)
        (parameters
          (parameter
            (identifier)
            (type_expression
              (card_type
                (expression
                  (constant_expression
                    (litteral
                      (integer)))))))
          (parameter
            (identifier)
            (type_expression
              (named_type
                (identifier)))))
        (attributes
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (expression
              (format_expression
                (string)
                (expression
                  (reference_expression
                    (identifier)))
                (expression
                  (reference_expression
                    (identifier))))))
          (attribute
            (identifier)
            (block
              (sequence
                (statement
                  (assignment_statement
                    (location
                      (identifier))
                    (expression
                      (reference_expression
                        (identifier)
                        (index_part
                          (expression
                            (reference_expression
                              (identifier))))))))))))))))
